--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,99 @@
 a, a:link, a:visited, a:focus, a:hover, a:active{
     color: #44bdbd;
-    text-decoration:none;
-    cursor: crosshair;
+    cursor: pointer;
+}
+
+.mdl-navigation__link:hover {
+    color: rgba(0,0,0,.8) !important;
+}
+.mdl-navigation .mdl-navigation__link {
+    font: 400 16px Open Sans, Arial, Helvetica, sans-serif;
+    /*font-family: "DIN Alternate", sans-serif;*/
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.my-logo {
+    font: 400 26px Open Sans, Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    font-weight: bold;
+    color: lightgray;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 .home-grid {
     text-align: center;
+    background: rgba(138,137,166,0.9);
+    background: linear-gradient(90deg, rgba(138,137,166,0.6) 0%, rgba(218,240,236,0.2864320728291317) 43%, rgba(61,187,213,0.6) 100%);
+    width: 50%;
+    margin-top: 10%;
+    border-radius: 65px;
 }
 
-.avatar-img {
+.home-grid img {
     border-radius: 50%;
-    width:  20%;
-    margin-top: 5%;
+    width:  30%;
 }
 
-.banner-text {
-    background-color: transparent;
-    opacity: .8;
-    width: 75%;
-    margin: auto;
-    border-radius: 10px;
-    text-align: center;
-}
-
-.banner-text h1 {
+.home-grid h1 {
     font-size: 40px;
     font-weight: bold;
-    color: lightblue;
+    color: #f2f3f7;
+    margin-bottom: auto;
 }
 
-.banner-text hr {
+.home-grid hr {
     margin: auto;
     border-top: 5px dotted lightblue;
     width: 50%;
 }
 
-.banner-text p {
+.home-grid p {
     font-size: 20px;
-    color: #fff;
+    color: #f2f3f7;
     padding: 1em;
+}
+
+.my-social-links {
+    display: flex;
+    justify-content: space-around;
+    width: 50%;
+    margin: auto;
+}
+
+.icon-circle-background {
+    background: #e0e0e0;
+    padding:10px;
+    border-radius: 50%;
+}
+
+.fa-facebook:hover {
+    background: #ffffff;
+    transition: fill 170ms ease-in-out 0s;
+    fill: rgb(59, 89, 152);
+}
+
+.fa-twitter:hover {
+    background: #ffffff;
+    transition: fill 170ms ease-in-out 0s;
+    fill: rgb(0, 172, 237);
+}
+
+.fa-instagram:hover {
+    background: #ffffff;
+    transition: fill 170ms ease-in-out 0s;
+    fill: rgb(63, 114, 155);
+}
+
+.fa-github:hover {
+    background: #ffffff;
+    transition: fill 170ms ease-in-out 0s;
+    fill: rgb(65, 131, 196);
+}
+
+.fa-linkedin:hover {
+    background: #ffffff;
+    transition: fill 170ms ease-in-out 0s;
+    fill: rgb(44, 152, 240);
 }
