--- a/src/App.css
+++ b/src/App.css
@@ -99,3 +99,10 @@ a, a:link, a:visited, a:focus, a:hover, a:active{
     display: inline-block;
     vertical-align: middle;
 }
+
+.fa-chevron-down {
+    color: white;
+    font-size: 50px;
+    text-align: center;
+    padding: 20px;
+}
